--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    // code generator for view
+    implementation "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
